manifests/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app: ""
  ports:
    - protocol: TCP
      port: ""
      targetPort: ""
